--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,7 @@ env/.env
 #staticfiles/*
 
 data_base_local_settings.py
-
+postgres-data
 #media/*
 
 # MAC
@@ -148,7 +148,7 @@ celerybeat.pid
 
 # Environments
 .env
-env/database.env
+env/.env-database
 .venv
 venv/
 env.bak/
