--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,13 +2,13 @@ version: "3.8"
 
 services:
   db_postgres:
-    image: postgres:14.2
+    image: postgres:latest
     ports:
-      - "5432:5432"
+      - "5435:5432"
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
     env_file:
-      - ./env/.env-database
+      - ./env/database.env
     container_name: postgres_db_container
 
   backend_python:
