--- a/env/.env-default
+++ b/env/.env-default
@@ -1,1 +1,9 @@
 export SECRET_KEY=''
+
+export DJANGO_SU_NAME=''
+export DJANGO_SU_EMAIL=''
+export DJANGO_SU_PASSWORD=''
+
+export POSTGRES_DATABASE_USER=''
+export POSTGRES_PASSWORD=''
+export POSTGRES_DATABASE_NAME=''
