--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 django = "==4.0.5"
 psycopg2 = "==2.9.3"
 djangorestframework = "==3.13.1"
+dj-rest-auth = "==2.2.4"
 
 [dev-packages]
 
