--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,12 @@ asgiref==3.5.2
 certifi==2022.6.15
 distlib==0.3.4
 Django==4.0.5
+djangorestframework==3.13.1
 filelock==3.7.1
 pipenv==2022.6.7
 platformdirs==2.5.2
 psycopg2==2.9.3
+pytz==2022.1
 six==1.16.0
 sqlparse==0.4.2
 virtualenv==20.14.1
