--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ django = "==4.0.5"
 psycopg2 = "==2.9.3"
 djangorestframework = "==3.13.1"
 dj-rest-auth = "==2.2.4"
+django-allauth = "==0.51.0"
 
 [dev-packages]
 
