--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,8 @@ psycopg2 = "==2.9.3"
 djangorestframework = "==3.13.1"
 dj-rest-auth = "==2.2.4"
 django-allauth = "==0.51.0"
+pyyaml = "==6.0"
+uritemplate = "==4.1.1"
 
 [dev-packages]
 
