--- a/requirements.txt
+++ b/requirements.txt
@@ -2,20 +2,29 @@ asgiref==3.5.2
 certifi==2022.6.15
 cffi==1.15.0
 charset-normalizer==2.0.12
-cryptography==37.0.3
+cryptography==37.0.2
 defusedxml==0.7.1
+distlib==0.3.4
 dj-rest-auth==2.2.4
 Django==4.0.5
 django-allauth==0.51.0
 djangorestframework==3.13.1
+filelock==3.7.1
 idna==3.3
 oauthlib==3.2.0
+pipenv==2022.6.7
+platformdirs==2.5.2
 psycopg2==2.9.3
 pycparser==2.21
 PyJWT==2.4.0
 python3-openid==3.2.0
 pytz==2022.1
+PyYAML==6.0
 requests==2.28.0
 requests-oauthlib==1.3.1
+six==1.16.0
 sqlparse==0.4.2
+uritemplate==4.1.1
 urllib3==1.26.9
+virtualenv==20.14.1
+virtualenv-clone==0.5.7
