--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ dj-rest-auth = "==2.2.4"
 django-allauth = "==0.51.0"
 pyyaml = "==6.0"
 uritemplate = "==4.1.1"
+drf-yasg = "==1.20.0"
 
 [dev-packages]
 
